# GithubActions

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  python-app.yml  unittest.yml
src/: app.py
tests/: test_app.py  test_operations.py
